--- a/playground/index.html
+++ b/playground/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="./build.js"></script>
+	<button id="test-button">test</button>
+	<div id="root"></div>
+	<script type="text/javascript" src="./build.js"></script>
 </body>
 
 </html>
