--- a/playground/index.html
+++ b/playground/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-	<button id="test-button">test</button>
+	<button id="test-dom-button">dom 100x</button>
+	<button id="test-deathmood-button">deathmood 100x</button>
+	<button id="test-all-button">all x</button>
+	<button id="single-dom-test-button">single dom</button>
+	<button id="single-deathmood-test-button">single deathmood</button>
+	<button id="clear-button">clear</button>
 	<div id="root"></div>
 	<script type="text/javascript" src="./build.js"></script>
 </body>
